# personal-site

./: .gitignore  TAGS  default.nix  package.yaml  stack.yaml  website.cabal
css/: style.css
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
posts/: Test Post1.md  Test Post2.md  testPost.txt
src/: .#Type.hs  API.hs  Main.hs  Parse.hs  Templates.hs  Type.hs  Webpages.hs
src/API/: Index.hs  Resume.hs  Type.hs
src/Class/: Blog.hs
src/Parse/: Body.hs  Code.hs  Date.hs  Desc.hs  Header.hs  Paragraph.hs  Tags.hs  Title.hs  Type.hs
src/Templates/: #Post.hs#  .#Post.hs  Footer.hs  Header.hs  Index.hs  Nav.hs  Post.hs  Type.hs
src/Webpages/: Blogpost.hs  Index.hs  Posts.hs  Summary.hs
static/: JakeLeachResume.html  Resume.html
static/css/: #post.css#  .#post.css  colors.css  index.css  post.css
