cabal-version: 1.12

name:           website
version:        0.1.0.0
description:    my website
homepage:       https://github.com/https://github.com/riz0id/personal-site#readme
bug-reports:    https://github.com/https://github.com/riz0id/personal-site/issues
copyright:      jake
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/https://github.com/riz0id/personal-site

executable website-exe
  main-is: Main.hs
  other-modules:
      API
      API.Index
      API.Resume
      API.Type
      Class.Blog
      Templates
      Templates.Footer
      Templates.Header
      Templates.Index
      Templates.Nav
      Templates.Type
      Type
      Paths_website
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , blaze-html
    , blaze-markup
    , http-client
    , parsec
    , servant-blaze
    , servant-server
    , time
    , transformers
    , wai
    , warp
  default-language: Haskell2010
